[Add&Change]homes/top,images

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,34 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
+      <!--中央の写真は後程編集、一旦文章は入力します-->
+      <div class="main-visual">
+        <div class="main-visual-content">
+          <div class="main-visual-text">
+            <div style="padding: 10px; margin-bottom: 10px; border: 1px solid #333333; border-radius: 10px;">
+              　ようこそ、ながのCAKEへ！<br>
+            　このサイトは、ケーキ販売のECサイトになります。<br>
+           　  会員でない方も商品の閲覧はできますが、<br>
+           　  購入には会員登録が必要になります。
+　　　　　　</div>
+          </div>
+        </div>
+      </div>
+      
+      <!--新着商品-->
+      <div class="new-product-content">
+        <h2 class="new-product-title">新着商品</h2>
+        
+        <!--eachで取り出す-->
+        
+        <!--商品画像タグ-->
+        <div class="product-picture">画像</div>
+        <!--商品名タグ-->
+        <div class="product-name">商品名</div>
+        <!--値段タグ-->
+        <div class="product-price">￥値段</div>
+      </div>
+      
+    </div>
+  </div>
+</div>
