--- a/app/views/cart_products/index.html.erb
+++ b/app/views/cart_products/index.html.erb
@@ -1,2 +1,40 @@
-<h1>CartProducts#index</h1>
-<p>Find me in app/views/cart_products/index.html.erb</p>
+<h2 class="head-line title_h2 text-center">ショッピングカート</h2>
+<div calss="row">
+  <div class="col-xs-11" >
+    <div class="pull-right margin-bottom">
+      <%= link_to " カートを空にする", cart_products_path, class: "glyphicon glyphicon-trash btn btn-danger" %>
+    </div>
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr class="info">
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+      </tbody>
+    </table>
+    <div class="col-xs-9 margin-bottom">
+    </div>
+
+    <div class="col-xs-3 pull-right billing">
+      <table class="table table-bordered text-right">
+        <thead>
+          <tr>
+            <td class="warning">合計金額</td>
+            <td class="text-right" id='total_price'>
+            </td>
+          </tr>
+        </thead>
+      </table>
+    </div>
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <%= link_to " 買い物を続ける", products_path, class: "glyphicon glyphicon-shopping-cart btn btn-info" %>
+      <%= link_to " 情報入力に進む", new_order_path,  class: "glyphicon glyphicon-pencil btn btn-success center-block" %>
+    </div>
+  </div>
+</div>
