Modify_admin_homes.scss

--- a/app/assets/stylesheets/admin/homes.scss
+++ b/app/assets/stylesheets/admin/homes.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admin/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.heading {
+  padding: 0 20px;
+  background-color: #eee;
+}
+
+.table-list {
+  background-color: #eee;
+}
