--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11,6 +11,7 @@
   background-position: center;
   position: relative;
   background-color: rgba(255,255,255,0.8);
+  margin-top: 30px;
 }
 
 .main-visual-text {
