--- a/app/views/customers/shared/_links.html.erb
+++ b/app/views/customers/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <p><%= link_to "こちら  ", new_session_path(resource_name) %>からサインインしてください</p><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <p><%= link_to "こちら", new_registration_path(resource_name) %>からサインインしてください</p><br />
+  <p><%= link_to "こちら ", new_registration_path(resource_name) %>から新規登録してください</p><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
