--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Customers#show</h1>
-<p>Find me in app/views/customers/show.html.erb</p>
+<h1>マイページ</h1>
+<p>登録情報　<%= link_to "編集する", edit_customers_path %></p>
+<p>氏名　<%= current_customer.last_name %>　<%= current_customer.first_name %></p>
+<p>カナ　<%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></p>
+<p>郵便番号　<%= current_customer.postal_code %></p>
+<p>住所　<%= current_customer.address %></p>
+<p>電話番号　<%= current_customer.telephone_number %></p>
+<p>メールアドレス　<%= current_customer.email %></p>
+<p>配送先　<%= link_to "一覧を見る", deliveries_path %></p>
+<p>注文履歴　<%= link_to "一覧を見る", orders_path %></p>
+
