--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="/"><span>LOGO</span></a> 　　<!--後でLOGO画像入れます-->
-      
+
       <nav>
         <ul class="nav navbar-nav navbar-right ml-auto bg p-4">
         <!--if分を追加予定（ユーザーデータがないので完成でき次第）-->
@@ -11,13 +11,13 @@
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to "商品一覧", '#', class: 'text-light'%></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
-            <%= link_to "新規登録", '#', class: 'text-light' %></li>
+            <%= link_to "新規登録", '/customers/sign_up', class: 'text-light' %></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
-            <%= link_to "ログイン", '#', class: 'text-light' %></li>
-        
+            <%= link_to "ログイン", '/customers/sign_in', class: 'text-light' %></li>
+
         </ul>
       </nav>
-      
+
     </div>
   </nav>
 </header>
