Create products show

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<div class="contatiner">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="product">
+        <div class="product_image">
+          画像
+        </div>
+        <div class="product_details">
+          <h3>商品名</h3>
+          <p>商品紹介</p>
+          <p><span>価格</span>(税込)</p>
+          <div class="order">
+            <select>個数</select>
+            <button class="btn btn-success">カートに入れる</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
