Create admin products show

--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Admin::Products#show</h1>
-<p>Find me in app/views/admin/products/show.html.erb</p>
+<!-- admin側の商品詳細ページ -->
+<div class="contatiner">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <div class="product">
+        <div class="product_image">
+          画像
+        </div>
+        <div class="product_title">
+          <p>商品名</p>
+          <p>商品紹介</p>
+          <p>税込価格</p>
+          <p>(税抜価格)</p>
+          <p>販売ステータス</p>
+        </div>
+        <div class="product_detail">
+          <h4>商品名</h4>
+          <h4>商品説明</h4>
+          <h4>ジャンル</h4>
+          <h4>税込価格（税抜価格）円</h4>
+          <h4>販売ステータス</h4>
+          <button class="btn btn-success">編集する</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
