--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,27 @@
       <nav>
         <ul class="nav navbar-nav navbar-right ml-auto bg p-4">
         <!--if分を追加予定（ユーザーデータがないので完成でき次第）-->
+        <% if customer_signed_in? %>
+          <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
+            <%= link_to "マイページ", '/customers', class: 'text-light' %></li>
+          <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
+            <%= link_to "商品一覧", '/products', class: 'text-light' %></li>
+          <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
+            <%= link_to "カート", '#', class: 'text-light' %></li>
+          <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
+            <%= link_to ' ログアウト', destroy_customer_session_path, method: :delete,class: 'text-light'  %></li>
+        <% else %>
+        
+        
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to "About", '/about', class: 'text-light' %></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
-            <%= link_to "商品一覧", '#', class: 'text-light'%></li>
+            <%= link_to "商品一覧", '/products', class: 'text-light'%></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to "新規登録", '/customers/sign_up', class: 'text-light' %></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to "ログイン", '/customers/sign_in', class: 'text-light' %></li>
+        <% end %>
 
         </ul>
       </nav>
