--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h1>
+<p>会員ID <%= @customer.id %></p>
+<%= form_with model: @customer, url: admin_customer_path, method: :patch, local: true do |f| %>
+
+  <p><%= f.label :名前　%>
+     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: @customer.last_name %>
+     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: @customer.first_name %>
+  </p>
+   <p><%= f.label :フリガナ　%>
+    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: @customer.last_name_kana %>
+    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: @customer.first_name_kana %>
+  </p>
+ <p><%= f.label :郵便番号（ハイフンなし）　%>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: @customer.postal_code %>
+  </p>
+ <p><%= f.label :住所　%>
+    <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: @customer.address %>
+  </p>
+  <p><%= f.label :電話番号（ハイフンなし）　%>
+    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: @customer.telephone_number %>
+  </p>
+ <p><%= f.label :メールアドレス　%>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: @customer.email %></p>
+<%= f.label :会員ステータス %>
+　<label><%= f.radio_button :is_deleted, :true %>無効</label>
+　<label><%= f.radio_button :is_deleted, :false %>有効</label>
+　<%= f.submit '保存' %>
+ <% end %>
