--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,5 +1,4 @@
 <h2><%= @customers.last_name %><%= @customers.first_name %>さんの会員情報</h2>
-<p>会員ID </p>
 <p>会員ID <%= @customers.id %></p>
 <p>氏名　<%= @customers.last_name %><%= @customers.first_name %></p>
 <p>フリガナ　<%= @customers.last_name_kana %><%= @customers.first_name_kana %></p>
@@ -7,6 +6,6 @@
 <p>住所　<%= @customers.address %></p>
 <p>電話番号　<%= @customers.telephone_number %></p>
 <p>メールアドレス　<%= @customers.email %></p>
-<p>会員ステータス</p>
+<p>会員ステータス  <%= @customers.is_deleted ? "無効" : "有効" %></p>
 <%= link_to "編集する", edit_admin_customer_path(@customers.id) %>
 <%= link_to "注文履歴一覧を見る", admin_order_path(@customers.id) %>
