--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -2,6 +2,12 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
+  
+  <p><%= f.label :名前　%>
+     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: current_customer.last_name %>
+     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: current_customer.first_name %>
+  </p>
+  
 
   <div class="field">
     <%= f.label :email %><br />
