--- a/app/views/customers/unsubscribe.html.erb
+++ b/app/views/customers/unsubscribe.html.erb
@@ -1,2 +1,7 @@
-<h1>Customers#unsubscribe</h1>
-<p>Find me in app/views/customers/unsubscribe.html.erb</p>
+ <h2>本当に退会しますか？</h2>
+    <p>退会すると、会員情報や</p>
+    <p>これまでの購入履歴が閲覧できなくなります。</p>
+    <p>退会する場合は「退会」をクリックしてください。</p>
+    <%= link_to '退会しない', customers_path %>
+  <%= link_to "退会する", customers_withdraw_path(@customer), method: :patch %>
+
