--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -20,6 +20,7 @@
       </td>
       
       <td><%= customer.email %></td>
+      <td><%= customer.is_deleted ? "無効" : "有効" %></td>
   </tr>
   <% end %>
 </tbody>
