--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,11 +1,15 @@
 <!-- 商品一覧画面　-->
 <div class="container">
   <div class="row">
-    <div class="col-md-3" style="margin-top: 30px;">
+    <div class="col-md-12" style="margin-top: 30px;">
       <div class="heading">
         <h4>商品一覧</h4>
       </div>
+      <!--新規作成ボタン-->
+      <%= link_to("/admin/products/new") do %>
       <i class="fas fa-plus-circle fa-pull-right size"></i>
+      <% end %>
+      
       <div class="table">
         <table class='table table-hover table-inverse'>
           <thead class="table-list">
@@ -21,7 +25,7 @@
             <% @products.each do |product| %>
               <tr>
                 <td>
-                  <%= product_id %>
+                  <%= product.id %>
                 </td>
                 <td>
                   <%= product.name %>
