[add]product/index,show page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
               画像
             </li>
             <li>
-              <%= product.name %>
+              <%= link_to product.name, product_path(product) %>
             </li>
             <li>
               ¥<%= product.price %>
