--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+<h1>注文情報入力</h1>
+ <%= form_with model: @order do |f| %>
+<h3><%= f.label :支払方法 %></h3>
+　<p><%= f.radio_button :payment_method, :credit %>クレジット</p>
+　<p><%=f.radio_button :payment_method, :cash %>銀行振込</p>
+<h3><%= f.label :お届け先 %></h3>
+　<p><%= f.radio_button :address, :1 %>ご自身の住所</p>
+
+　<% end %>
