--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<div class="contatiner">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3 class="heading">注文履歴一覧</h3>
+      <table class="table">
+        <%= render 'orders/index_order_table', orders: @orders %>
+      </table>
+    </div>
+  </div>
+</div>
