--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,2 +1,42 @@
-<h1>Admin::Products#edit</h1>
-<p>Find me in app/views/admin/products/edit.html.erb</p>
+<p class="genre-title">商品編集</p>
+
+<%= form_with model: @product,:url => {:action => :update}, local: true do |f| %>
+<div class='col-md-8 offset-md-1'>
+  <table class='table table-hover table-inverse'>
+    <tbody>
+      <tr>
+        <td>商品画像</td>
+        <td><%= f.attachment_field :image %></td>
+      </tr>
+      <tr>
+        <td>商品名</td>
+        <td><%= f.text_field :name %></td>
+      </tr>
+      <tr>
+        <td>商品説明</td>
+        <td><%= f.text_field :introduction %></td>
+      </tr>
+      <tr>
+        <td>ジャンル</td>
+        <td><%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
+      </tr>
+      <tr>
+        <td>税抜価格</td>
+        <td><%= f.text_field :price %></td>
+      </tr>
+      <tr>
+        <td>販売ステータス</td>
+        <td>
+           <%= f.radio_button :sales_status, '0' %>
+           <%= f.label :sales_status, "販売中", value:  0 %>
+           <%= f.radio_button :sales_status, '1' %>
+           <%= f.label :sales_status, "販売停止中", value:  1 %>
+        </td>
+      </tr>
+      <tr>
+        <td><%= f.submit '変更を保存',class: 'btn btn-success' %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<% end %>
