--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -14,12 +14,12 @@
           <p>販売ステータス</p>
         </div>
         <div class="product_detail">
-          <h4>商品名</h4>
-          <h4>商品説明</h4>
+          <h4><%= @product.name %></h4>
+          <h4><%= @product.introduction %></h4>
           <h4>ジャンル</h4>
-          <h4>税込価格（税抜価格）円</h4>
-          <h4>販売ステータス</h4>
-          <button class="btn btn-success">編集する</button>
+          <h4><%= @product.add_tax_price.to_s(:delimited) %> (<%= @product.price.to_s(:delimited) %>)円</h4>
+          <h4><%= @product.sales_status ? "販売中" : "販売停止中"%></h4>
+          <button class="btn btn-success"><%= link_to "編集する", "/admin/products/#{@product.id}/edit"  %></button>
         </div>
       </div>
     </div>
