Create order confirmination page

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,2 +1,40 @@
-<h1>Orders#confirm</h1>
-<p>Find me in app/views/orders/confirm.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h2>注文情報確認</h2>
+      <table class="table table-hover table-bordered col-sm-6">
+        <thead>
+          <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>商品画像、商品名</td>
+            <td>単価</td>
+            <td>数量</td>
+            <td>小計</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="fees-info border">
+        <div class="fee-lists">
+          <p>送料</p>
+          <p>商品合計</p>
+          <p>請求金額</p>
+        </div>
+        <div class="fees">
+          <p>送料</p>
+          <p>商品合計</p>
+          <p>請求金額</p>
+        </div>
+      </div>
+      <p>支払方法</p>
+      <p>お届け先</p>
+    </div>
+  </div>
+</div>
