--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,6 +1,6 @@
 <p class="genre-title">商品編集</p>
 
-<%= form_with model: @product,:url => {:action => :update}, local: true do |f| %>
+<%= form_with model: @product,:url => {:controller => :products, :action => :update}, local: true do |f| %>
 <div class='col-md-8 offset-md-1'>
   <table class='table table-hover table-inverse'>
     <tbody>
