--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -10,11 +10,11 @@
       </tr>
       <tr>
         <td>商品名</td>
-        <td><%= f.text_field :name %></td>
+        <td><%= f.text_field :name,size: "40" %></td>
       </tr>
       <tr>
         <td>商品説明</td>
-        <td><%= f.text_field :introduction %></td>
+        <td><%= f.text_area :introduction,size: "45x5" %></td>
       </tr>
       <tr>
         <td>ジャンル</td>
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <td>税抜価格</td>
-        <td><%= f.text_field :price %></td>
+        <td><%= f.text_field :price,size: "40" %></td>
       </tr>
       <tr>
         <td>販売ステータス</td>
