--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,24 +1,21 @@
 <!-- 顧客側の商品一覧画面 -->
 <div class="container">
   <div class="row">
-    <div class="col-md-3" style="margin-top: 30px;">
+    <div class="col-md-12" style="margin-top: 30px;">
       <h4>商品一覧</h4>
-      <table class="table">
-        <ul>
+      <div class="row">
           <% @products.each do |product| %>
-            <li>
-              画像
-            </li>
-            <li>
-              <%= link_to product.name, product_path(product) %>
-            </li>
-            <li>
-              ¥<%= product.price %>
-            </li>
+            <div class="col-md-4 text-center">
+              <!--画像のクリックで詳細ページに移動できます-->
+              <%= link_to product_path(product) do %>
+              <%= attachment_image_tag product, :image,fallback: "no_image.jpg", style: "width:50%; "%>
+              <% end %>
+              
+              <div><%= product.name %></div>
+              <div>¥<%= product.price.to_s(:delimited) %></div>
+            </div>
           <% end %>
-          </ul>
-        </tbody>
-      </table>
+      </div>
       <div class="pagination">
         <%= paginate @products %>
       </div>
