--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -2,11 +2,12 @@
 <div calss="row">
   <div class="col-xs-11" >
     <div class="pull-right margin-bottom">
-      <%= link_to " カートを空にする", cart_products_path, class: "glyphicon glyphicon-trash btn btn-danger" %>
+    <%= link_to "カートを空にする", cart_products_destroy_all_path, method: :delete, class: "btn btn-danger d-inline ml-auto" %>
     </div>
     <table class="table table-hover table-bordered">
       <thead>
         <tr class="info">
+
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
@@ -16,15 +17,24 @@
       </thead>
 
       <tbody>
-
+      <% @sum = 0 %>
       <% @cart_products.each do |cart_product| %>
         <tr>
-          <td><%= cart_product.product.name %></td>
-          <td><%= cart_product.product.price %></td>
-          <td><%= cart_product.amount %></td>
-
+          <td>
+               <%= cart_product.product.name %><%= attachment_image_tag cart_product.product, :image, size: "60x40" %>
 
           </td>
+          <td><%= (cart_product.product.price * 1.1).to_i  %>円</td>
+          <td>
+            <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
+            <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
+            <%= f.submit "変更", class: "btn-sm btn-success" %>
+            <% end %>
+          </td>
+
+          <td><%= (cart_product.product.price * cart_product.amount * 1.1).to_i  %>円</td>
+          <% @sum += (cart_product.product.price * cart_product.amount * 1.1 ).to_i  %>
+          <td><%= link_to '削除する', cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %></td>
         </tr>
      <% end %>
       </tbody>
@@ -37,6 +47,7 @@
         <thead>
           <tr>
             <td class="warning">合計金額</td>
+            <td><%= @sum %>円</td>
             <td class="text-right" id='total_price'>
             </td>
           </tr>
