--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to "商品一覧", '/products', class: 'text-light' %></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
-            <%= link_to "カート", '#', class: 'text-light' %></li>
+            <%= link_to "カート", 'cart_products', class: 'text-light' %></li>
           <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
             <%= link_to ' ログアウト', destroy_customer_session_path, method: :delete,class: 'text-light'  %></li>
         <% elsif admin_signed_in? %>
