--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,49 +1,33 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= form_with model: @customer, local: true do |f| %>
+<h1>会員情報編集</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
-  
   <p><%= f.label :名前　%>
      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: current_customer.last_name %>
      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: current_customer.first_name %>
   </p>
-  
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+   <p><%= f.label :フリガナ　%>
+    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: current_customer.last_name_kana %>
+    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: current_customer.first_name_kana %>
+  </p>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <p><%= f.label :郵便番号（ハイフンなし）　%>
+    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: current_customer.postal_code %>
+  </p>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <p><%= f.label :住所　%>
+    <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: current_customer.address %>
+  </p>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+  <p><%= f.label :電話番号（ハイフンなし）　%>
+    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: current_customer.telephone_number %>
+  </p>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+  <p><%= f.label :メーwwwルアドレス　%>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: current_customer.email %>
+  </p>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+<p><%= f.submit "編集内容を保存" %>
+<%= link_to "退会する", customers_unsubscribe_path %></p>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
