--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: current_customer, url: customers_path, local: true do |f| %>
+<%= form_with model: @customer, url: customers_path, method: :patch, local: true do |f| %>
 <h1>会員情報編集</h1>
 
   <p><%= f.label :名前　%>
@@ -14,19 +14,19 @@
   <p><%= f.label :郵便番号（ハイフンなし）　%>
     <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: current_customer.postal_code %>
   </p>
-  
+
   <p><%= f.label :住所　%>
     <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: current_customer.address %>
   </p>
-  
+
   <p><%= f.label :電話番号（ハイフンなし）　%>
     <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: current_customer.telephone_number %>
   </p>
-  
-  <p><%= f.label :メールアドレス　%>
+
+  <p><%= f.label :メーwwwルアドレス　%>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: current_customer.email %>
   </p>
-  
+
 <p><%= f.submit "編集内容を保存" %>
 <%= link_to "退会する", customers_unsubscribe_path %></p>
 <% end %>
