--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -9,9 +9,9 @@
 <p><div><%= f.radio_button :address_opition, 1 %>登録済みの住所</p>
 <%= f.collection_select :delivery_id, current_customer.deliveries, :id, :all_address %></div>
 <p><div><%= f.radio_button :address_opition, 2 %>新しいお届け先</p>
-<p><%= f.label "郵便番号(ハイフンなし)" %><%= f.text_field :postal_code %></p>
-<p><%= f.label "住所" %><%= f.text_field :address %></p>
-<p><%= f.label "宛名" %><%= f.text_field :destination %></p></div>
+<p><%= f.label "郵便番号(ハイフンなし)" %><%= f.text_field :delivery_postal_code %></p>
+<p><%= f.label "住所" %><%= f.text_field :delivery_address %></p>
+<p><%= f.label "宛名" %><%= f.text_field :delivery_name %></p></div>
 <%= f.submit '確認画面に進む', class: "btn btn-primary pull-right" %>
 
 
