Modify order confirmination page

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,8 +1,11 @@
 // Place all the styles related to the orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table.delivery-info th,
+table.delivery-info th {
+  display: block;
+}
 
-.heading {
-  background-color: #eee;
-  margin-top: 20px;
+.thanks {
+  height: 200px;
 }
