--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,46 +1,63 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h2>注文情報確認</h2>
-      <table class="table table-hover table-bordered col-sm-6">
+      <h2 style="margin-top: 20px;">注文情報確認</h2>
+      <!-- 注文情報のテーブル -->
+      <table class="table table-bordered">
         <thead>
           <tr>
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
           <th>小計</th>
-          <th></th>
           </tr>
         </thead>
         <tbody>
+          <!-- 注文情報の内容 -->
           <%= render 'public/orders/confirmination_table.html', cart_products: @cart_products %>
         </tbody>
       </table>
-      <div class="fees-info border">
-        <div class="fee-lists">
-          <p>送料</p>
-          <p>商品合計</p>
-          <p>請求金額</p>
-        </div>
-        <div class="fees">
-          <% @total %>
-          <p><%= @delivery_fee %></p>
-          <p><%= @sum %></p>
-        </div>
-      </div>
+    </div>
+   <div class="col-md-8">
+      <!-- 金額のリスト -->
+      <table class="table table-bordered">
+        <% @total = 0 %>
+        <th class="bg-light">送料</th>
+        <td><%= @delivery_fee %></td>
+        <th class="bg-light">商品合計</th>
+        <td><%= @sum %></td>
+        <th class="bg-light">請求金額</th>
+        <td><%= @total = @sum + @delivery_fee %></td>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-8">
+      <!-- 宛先情報の確認 -->
+      <table class="table table-borderless">
+        <tr>
+          <th class="h5">支払方法</th>
+          <td><%= @order.payment_method %></td>
+        </tr>
+        <tr>
+          <th class="h5">お届け先</th>
+          <td>
+            〒<%= @order.delivery_postal_code %>
+            <%= @order.delivery_address %>
+            <%= @order.delivery_name %>
+          </td>
+        </tr>
+      </table>
       <div class="order_confirmination">
-        <%= form_with model: @order, url: orders_thanks_path, local:true do |g| %>
-          <%= g.hidden_field :payment_method, :value => @order.payment_method %>
-          <%= g.hidden_field :delivery_postal_code, :value => @order.delivery_postal_code %>
-          <%= g.hidden_field :delivery_address, :value => @order.delivery_address %>
-          <%= g.hidden_field :delivery_name, :value => @order.delivery_name %>
-          <p>支払方法 <%= @order.payment_method %></p>
-          <p>お届け先</p>
-          <%= @order.delivery_postal_code %>
-          <%= @order.delivery_address %>
-          <%= @order.delivery_name %>
-          <%= g.submit '注文を確定する', class: 'btn btn-success' %>
-        <% end %>
+      <%= form_with model: @order, url: orders_path, method: :post, local:true do |f| %>
+        <%= f.hidden_field :payment_method, :value => @order.payment_method %>
+        <%= f.hidden_field :delivery_postal_code, :value => @order.delivery_postal_code %>
+        <%= f.hidden_field :delivery_address, :value => @order.delivery_address %>
+        <%= f.hidden_field :delivery_name, :value => @order.delivery_name %>
+        <%= f.hidden_field :total_payment, :value => @total %>
+        <%= f.hidden_field :delivery_fee, :value => @delivery_fee %>
+        <%= f.submit '注文を確定する', class: 'btn btn-success text-center' %>
+      <% end %>
       </div>
     </div>
   </div>
