--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,2 +1,9 @@
-<h1>Orders#thanks</h1>
-<p>Find me in app/views/orders/thanks.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="thanks">
+        <h1 class="text-center" style="line-height: 200px;">ご注文ありがとうございました！</h1>
+      </div>
+    </div>
+  </div>
+</div>
