--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,28 +1,107 @@
-<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h1>
-<p>会員ID <%= @customer.id %></p>
-<%= form_with model: @customer, url: admin_customer_path, method: :patch, local: true do |f| %>
+<div class="row">
+<h4 class="col-md-3 mx-auto font-weight-bold"><%= @customer.last_name %><%= @customer.first_name %>さんの会員編集</h4>
+</div>
 
-  <p><%= f.label :名前　%>
-     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: @customer.last_name %>
-     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: @customer.first_name %>
-  </p>
-   <p><%= f.label :フリガナ　%>
-    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: @customer.last_name_kana %>
-    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: @customer.first_name_kana %>
-  </p>
- <p><%= f.label :郵便番号（ハイフンなし）　%>
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: @customer.postal_code %>
-  </p>
- <p><%= f.label :住所　%>
-    <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: @customer.address %>
-  </p>
-  <p><%= f.label :電話番号（ハイフンなし）　%>
-    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: @customer.telephone_number %>
-  </p>
- <p><%= f.label :メールアドレス　%>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: @customer.email %></p>
-<%= f.label :会員ステータス %>
-　<label><%= f.radio_button :is_deleted, :true %>無効</label>
-　<label><%= f.radio_button :is_deleted, :false %>有効</label>
-　<%= f.submit '保存' %>
- <% end %>
+<br/>
+
+<div class="row">
+ <div class="col-md-10 mx-auto">
+  <%= form_with model: @customer, url: admin_customer_path, method: :patch, local: true do |f| %>
+  <table class="table table-borderless table-sm">
+
+   <tbody>
+    <tr>
+     <th>
+      <p>会員ID</p>
+     </th>
+     <td>
+      <div class="field">
+       <%= @customer.id %>
+      </div>
+     </td>
+    </tr>
+    <tr>
+     <th>
+      <p>名前</p>
+     </th>
+     <td>
+     <div class="field">
+      <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: @customer.last_name %>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: @customer.first_name %>
+     </div>
+     </td>
+    </tr>
+    <tr>
+     <th>
+      <p>フリガナ</p>
+     </th>
+     <td>
+     <div class="field">
+       <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: @customer.last_name_kana %>
+       <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: @customer.first_name_kana %>
+     </div>
+     </td>
+    </tr>
+     <tr>
+     <th>
+      <p>郵便番号</p>
+     </th>
+     <td>
+     <div class="field">
+      <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: @customer.postal_code %>
+     </div>
+     </td>
+    </tr>
+    <tr>
+     <th>
+      <p>住所</p>
+     </th>
+     <td>
+     <div class="field">
+      <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: @customer.address %>
+     </div>
+     </td>
+    </tr>
+     <tr>
+     <th>
+      <p>電話番号</p>
+     </th>
+     <td>
+     <div class="field">
+      <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: @customer.telephone_number %>
+     </div>
+     </td>
+    </tr>
+      <tr>
+     <th>
+      <p>メールアドレス</p>
+     </th>
+     <td>
+     <div class="field">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: @customer.email %>
+     </div>
+     </td>
+    </tr>
+     <th>
+      <p>会員ステータス</p>
+     </th>
+     <td>
+      <%= f.radio_button :is_deleted, :true %>
+      <%= f.label :is_deleted, "無効", value: true, class: "form" %>
+      <%= f.radio_button :is_deleted, :false %>
+      <%= f.label :is_deleted, "有効", value: false %>
+     </td>
+    </tr>
+    <tr>
+     <td></td>
+      <th><%= f.submit '保存', class: "btn-success"%></th>
+      <td></td>
+    </tr>
+   </tbody>
+  </table>
+   <% end %>
+ </div>
+</div>
+　
+　
+
