--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,57 +1,122 @@
-<h2>新規会員登録</h2>
+<div class="row">
+  <h4 class="col-md-13 mx-auto font-weight-bold">新規会員登録</h4>
+</div>
 
-<%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
+<div class="row">
+ <div class="col-md-12 mx-auto">
+  <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <p><%= f.label :名前　%>
-     （姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-    （名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %></p>
-  </div>
+ <table class="table table-borderss table-sm">
+   <tr>
+     <th>
+       <p>名前</p>
+     </th>
+     <th>（姓）</th>
+     <td>
+       <div class="field">
+         <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+       </div>
+     </td>
+     <td></td>
+     <th>（名）</th>
+     <td>
+       <div class="field">
+         <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+       </div>
+     </td>
+   </tr>
+   <tr>
+     <th>
+       <p>フリガナ</p>
+     </th>
+     <th>（セイ）</th>
+     <td>
+       <div class="field">
+         <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+       </div>
+     </td>
+     <td></td>
+       <th>（メイ）</th>
+       <td>
+         <div class="field">
+           <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+         </div>
+       </td>
+      </tr>
+      <tr>
+        <th>
+          <p>メールアドレス</p>
+        </th>
+        <td></td>
+        <td>
+          <div class="field">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <p>郵便番号（ハイフンなし）</p>
+        </th>
+        <td></td>
+        <td>
+          <div class="field">
+            <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <p>住所</p>
+        </th>
+        <td></td>
+        <td colspan="4">
+          <div class="field">
+            <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <p>電話番号（ハイフンなし）</p>
+        </th>
+        <td></td>
+        <td>
+          <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <p>パスワード（6文字以上）</p>
+        </th>
+        <td></td>
+        <td>
+          <% if @minimum_password_length %>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </td>
+      </tr>
+      <tr>
+        <th>
+          <p>パスワード（確認用）</p>
+        </th>
+        <td></td>
+        <td>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td><br>
+        <td>
+          <%= f.submit "新規登録", class: "btn btn-success btn-block" %>
+        </td>
+      </tr>
+     <% end %>
 
-  <div class="field">
-    <p><%= f.label :フリガナ　%>
-     （セイ）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
-    （メイ）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %></p>
+    </table>
   </div>
-
-  <div class="field">
-    <p><%= f.label :メールアドレス　%>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %></p>
   </div>
-
-  <div class="field">
-    <p><%= f.label :郵便番号（ハイフンなし）　%>
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %></p>
-  </div>
-
-  <div class="field">
-    <p><%= f.label :住所　%>
-    <%= f.text_field :address, autofocus: true, autocomplete: "address" %></p>
-  </div>
-
-  <div class="field">
-    <p><%= f.label :電話番号（ハイフンなし）　%>
-    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %></p>
-  </div>
-
-
-  <div class="field">
-    <p><%= f.label :パスワード%>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "new-password" %></p>
-  </div>
-
-  <div class="field">
-    <p><%= f.label :パスワード（確認用）　%>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
-  </div>
-
-  <div class="actions">
-    <p><%= f.submit "新規登録" %></p>
-  </div>
-<% end %>
 <p>既に会員済みの方</p>
 <%= render "customers/shared/links" %>
