--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,33 +1,98 @@
-<%= form_with model: @customer, url: customers_path, method: :patch, local: true do |f| %>
-<h1>会員情報編集</h1>
-
-  <p><%= f.label :名前　%>
-     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: current_customer.last_name %>
-     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: current_customer.first_name %>
-  </p>
-
-   <p><%= f.label :フリガナ　%>
-    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: current_customer.last_name_kana %>
-    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: current_customer.first_name_kana %>
-  </p>
-
-  <p><%= f.label :郵便番号（ハイフンなし）　%>
-    <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: current_customer.postal_code %>
-  </p>
-
-  <p><%= f.label :住所　%>
-    <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: current_customer.address %>
-  </p>
-
-  <p><%= f.label :電話番号（ハイフンなし）　%>
-    <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: current_customer.telephone_number %>
-  </p>
-
-  <p><%= f.label :メーwwwルアドレス　%>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: current_customer.email %>
-  </p>
-
-<p><%= f.submit "編集内容を保存" %>
-<%= link_to "退会する", customers_unsubscribe_path %></p>
+<div class ="row">
+  <h4 class="col-md-10 mx-auto font-weight-bold">会員情報編集</h4>
+</div>
+<br>
+<div class="row">
+  <div class="col-md-10 mx-auto">
+    <%= form_with model: current_customer, url: customers_path, local: true do |f| %>
+    <table class="table table-borderless table-sm">
+      <tbody>
+        <tr>
+          <th>
+            <p>名前</p>
+          </th>
+            <td>
+             <div class="field">
+               <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: current_customer.last_name %>
+              </div>
+            </td>
+             <td>
+               <div class="field">
+                 <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: current_customer.first_name %>
+               </div>
+             </td>
+        </tr>
+        <tr>
+          <th>
+            <p>フリガナ</p>
+          </th>
+           <td>
+             <div class="field">
+               <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder: current_customer.last_name_kana %>
+             </div>
+           </td>
+           <td>
+             <div class="field">
+               <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder: current_customer.first_name_kana %>
+             </div>
+           </td>
+        </tr>
+        <tr>
+          <th>
+            <p>郵便番号</p>
+          </th>
+          <td>
+            <div class="field">
+              <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code", placeholder: current_customer.postal_code %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <th>
+            <p>住所</p>
+          </th>
+          <td colspan="2">
+            <div class="field">
+              <%= f.text_field :address, autofocus: true, autocomplete: "address", placeholder: current_customer.address %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <th>
+            <p>電話番号</p>
+          </th>
+          <td>
+            <div class="field">
+              <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number", placeholder: current_customer.telephone_number %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <th>
+            <p>メールアドレス</p>
+          </th>
+          <td>
+            <div class="field">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: current_customer.email %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <div class="field">
+              <%= f.submit "編集内容を保存", class: "btn btn-success" %>
+            </div>
+          </td>
+          <td>
+            <div class="field">
+              <%= link_to "退会する", customers_unsubscribe_path, class: "btn btn-danger" %>
+            </div>
+          </td>
+        </tr>
+      </div>
+     </div>  
+    </tbody>
+  </table>
 <% end %>
 
