--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,11 +1,59 @@
-<h1>マイページ</h1>
-<p>登録情報　<%= link_to "編集する", edit_customers_path %></p>
-<p>氏名　<%= current_customer.last_name %>　<%= current_customer.first_name %></p>
-<p>カナ　<%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></p>
-<p>郵便番号　<%= current_customer.postal_code %></p>
-<p>住所　<%= current_customer.address %></p>
-<p>電話番号　<%= current_customer.telephone_number %></p>
-<p>メールアドレス　<%= current_customer.email %></p>
-<p>配送先　<%= link_to "一覧を見る", deliveries_path %></p>
-<p>注文履歴　<%= link_to "一覧を見る", orders_path %></p>
+<div class="row">
+  <h2 class="col-md-2 mx-auto font-weight-bold">マイページ</h2>
+</div>
+<br>
+ <br>
+ <div class="row">
+   <div class="col-md-10">
+     <table bgcolor="#FFF" class="table table-bordered shadow">
+       <tr>
+         <th class="text-left bg-secondary text-light">氏名</th>
+         <td><%= current_customer.last_name %>　<%= current_customer.first_name %></td>
+       </tr>
+         <th class="text-left bg-secondary text-light">カナ</th>
+         <td><%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></td>
+       </tr>
+       <tr>
+         <th class="text-left bg-secondary text-light">郵便番号</th>
+         <td><%= current_customer.postal_code %></td>
+       </tr>
+       <tr>
+         <th class="text-left bg-secondary text-light">住所</th>
+         <td><%= current_customer.address %></td>
+       </tr>
+       <tr>
+         <th class="text-left bg-secondary text-light">電話番号</th>
+         <td><%= current_customer.telephone_number %></td>
+       </tr>
+       <tr>
+         <th class="text-left bg-secondary text-light">メールアドレス</th>
+         <td><%= current_customer.email %></td>
+       </tr>
+     </table>
+   </div>
+ </div>
+ <div class="row">
+   <div class="col-md-10">
+    <table>
+      <tr>
+        <td><b class="form">登録情報</b></td>
+        <td><%= link_to "編集する", edit_customers_path, class: "btn btn-success" %></td>
+      </tr>
+      <tr>
+        <td><br></td>
+      </tr>
+     <tr>
+       <td><b class="form">配送先</b></td>
+       <td><%= link_to "一覧を見る", deliveries_path, class: "btn btn-primary" %></td>
+     </tr>
+     <tr>
+       <td><br></td>
+     </tr>
+     <tr>
+       <td><b class="form">注文履歴</b></td>
+       <td><%= link_to "一覧を見る", orders_path, class: "btn btn-primary" %></td>
+     </tr>
+    </table>
+   </div>
+ </div>
 
