--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,20 +1,52 @@
-<h1>注文情報入力</h1>
- <%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>
-<h3><%= f.label :支払方法 %></h3>
-　<p><%= f.radio_button :payment_method, :credit %>クレジット</p>
-　<p><%=f.radio_button :payment_method, :cash %>銀行振込</p>
-<h3><div><%= f.label :お届け先 %></div></h3>
-<div><%= f.radio_button :address_opition, 0 %>現在の住所
-　<p><%= current_customer.address %></p></div>
-<p><div><%= f.radio_button :address_opition, 1 %>登録済みの住所</p>
-<%= f.collection_select :delivery_id, current_customer.deliveries, :id, :all_address %></div>
-<p><div><%= f.radio_button :address_opition, 2 %>新しいお届け先</p>
-<p><%= f.label "郵便番号(ハイフンなし)" %><%= f.text_field :delivery_postal_code %></p>
-<p><%= f.label "住所" %><%= f.text_field :delivery_address %></p>
-<p><%= f.label "宛名" %><%= f.text_field :delivery_name %></p></div>
-<%= f.submit '確認画面に進む', class: "btn btn-primary pull-right" %>
-
-
-
-
-　<% end %>
+<div class="container mb-auto">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <h4 class="font-weight-bold">注文情報入力</h4>
+    </div>
+  </div>
+  <%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>
+  <div class="row">
+    <h5 class="font-weight-bold">支払方法</h5>
+  </div>
+  <div class="row form-check">
+    <%= f.radio_button :payment_method, :credit, checked: true %>
+    <%= f.label :payment_method, "クレジットカード" %>
+  </div>
+  <div class="row form-check">
+    <%= f.radio_button :payment_method, :cash %>
+    <%= f.label :payment_method, "現金" %>
+  </div>
+  <div class="row mt-3">
+    <h5 class="font-weight-bold">お届け先</h5>
+  </div>
+  <div class="font mt-3 form-check">
+    <%= f.radio_button :address_opition, "0", checked: true %>
+    <%= f.label :address_opition, "ご自身の住所" %><br />
+    <%= current_customer.address %>
+  </div>
+  <div class="font mt-3 form-check">
+    <%= f.radio_button :address_opition, "1" %>
+    <%= f.label :address_opition, "登録済み住所" %><br />
+    <%= f.collection_select :delivery_id, current_customer.deliveries, :id, :all_address %>
+  </div>
+  <div class="font mt-3 form-check">
+    <%= f.radio_button :address_opition, "2" %>
+    <%= f.label :address_opition, "新しいお届け先" %>
+  </div>
+  <div class="row">
+    <div class="col-3">
+      <p>　郵便番号（ハイフンなし）</p>
+      <p>　住所</p>
+      <p>　宛名</p>
+    </div>
+    <div clas="col-9 form-group">
+      <%= f.text_field :delivery_postal_code, placeholder: "郵便番号", class: "form-control col-sm-100" %>
+      <%= f.text_field :delivery_address, placeholder: "住所", class: "form-control col-sm-100" %>
+      <%= f.text_field :delivery_name, placeholder: "宛名", class: "form-control col-sm-100" %>
+  　</div>
+　</div>
+<div class="row justify-content-left">
+  <%= f.submit '確認画面に進む', class: "btn btn-primary pull-right" %>
+  <% end %>
+  </div>
+  </div>
