--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -15,13 +15,32 @@
 }
 
 .product_image {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 .product_details {
-  margin: 0 auto;
+  margin-left: 50px;
+  padding: 0;
 }
 
 .pagination {
   justify-content: center;
+}
+
+.order {
+  display: inline-block;
+}
+
+.admin_product_details {
+  margin-top: 100px;
+  margin-bottom: 20px;
+}
+
+.space{
+  width: 130px;
+}
+
+.space-text{
+  width: 400px;
 }
