--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,13 +1,17 @@
-<p class="genre-title">ジャンル編集</p>
+<div style= "margin: 30px 0 30px 90px">
+  <p class="genre-title">ジャンル一覧・追加</p>
+</div>
 
 <%= form_with model: @genre,:url => {:action => :update}, local: true do |f| %>
-<div class="form-content">
-  <p>ジャンル名</p>
-  <div class="form-group">
-    <%= f.text_field :name %>
-  </div>
-  <div class="form-group">
-   <%= f.submit '変更を保存',class: 'btn btn-success' %>
+<div style= "margin: 30px 0 30px 180px">
+  <div class="form-content">
+    <p>ジャンル名</p>
+    <div class="form-group">
+      <%= f.text_field :name %>
+    </div>
+    <div class="form-group">
+     <%= f.submit '変更を保存',class: 'btn btn-success' %>
+    </div>
   </div>
 </div>
 <% end %>
