--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,8 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12" style="margin-top: 30px;">
-      <div class="heading">
-        <h4>商品一覧</h4>
+      <div style= "margin: 30px 0 30px">
+        <h4 class="genre-title">商品一覧</h4>
       </div>
       <!--新規作成ボタン-->
       <%= link_to("/admin/products/new") do %>
