--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,28 +1,42 @@
 <!-- admin側の商品詳細ページ -->
-<p class="genre-title">商品詳細</p>
 <div class="contatiner">
   <div class="row">
     <div class="col-sm-10 col-md-8 col-lg-7 px- px-sm-0 mx-auto">
+      <!--詳細ページのタイトル-->
+      <div style= "margin: 30px 0 30px 90px">
+       <h4 class="genre-title">商品詳細</h4>
+      </div>
+      <!--画像の設定-->
       <div class="product">
         <div class="product_image">
-          <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", style: "width:50%; "%>
+          <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", size: "350x300"%>
         </div>
-        <div class="product_title">
-          <p>商品名</p>
-          <p>商品紹介</p>
-          <p>税込価格</p>
-          <p>(税抜価格)</p>
-          <p>販売ステータス</p>
-        </div>
-        <div class="product_detail">
-          <h4><%= @product.name %></h4>
-          <h4><%= @product.introduction %></h4>
-          <h4><%= @product.genre.name %></h4>
-          <h4><%= @product.add_tax_price.to_s(:delimited) %> (<%= @product.price.to_s(:delimited) %>)円</h4>
-          <h4><%= @product.sales_status ? "販売停止中" : "販売中"%></h4>
+        <!--テーブルで作成しました。販売ステータスの色が変わらないです-->
+        <div class="col-md-7">
+          <div class="admin_product_details">
+            <table>
+              <tr><td class="space">商品名</td><td class="space-text"><%= @product.name %></td></tr>
+              <tr><td class="space">商品紹介</td><td class="space-text"><%= @product.introduction %></td></tr>
+              <tr><td class="space">ジャンル名</td><td class="space-text"><%= @product.genre.name %></td></tr>
+              <tr><td class="space">税込価名<br>(税抜価格)</td><td class="space-text"><%= @product.add_tax_price.to_s(:delimited) %> (<%= @product.price.to_s(:delimited) %>)円</td></tr>
+              <tr><td class="space">販売ステータス</td><td class="space-text"><%= @product.sales_status ? "販売停止中" : "販売中"%></td></tr>
+            </table>
+          </div>
           <button class="btn btn-success"><%= link_to "編集する", "/admin/products/#{@product.id}/edit"  %></button>
         </div>
+        <!--<div class="product_detail">-->
+        <!--  <h4><%= @product.name %></h4>-->
+        <!--  <h4><%= @product.introduction %></h4>-->
+        <!--  <h4><%= @product.genre.name %></h4>-->
+        <!--  <h4><%= @product.add_tax_price.to_s(:delimited) %> (<%= @product.price.to_s(:delimited) %>)円</h4>-->
+        <!--  <h4><%= @product.sales_status ? "販売停止中" : "販売中"%></h4>-->
+        <!--  <button class="btn btn-success"><%= link_to "編集する", "/admin/products/#{@product.id}/edit"  %></button>-->
+        <!--</div>-->
       </div>
     </div>
   </div>
 </div>
+
+<!--td→thに変更すれば文字の大きさと太さが若干変化します。（thはタイトルなので）-->
+
+
