--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,89 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <h4 style="margin-top: 20px;">注文履歴詳細</h4>
+      <table class="table table-borderless">
+        <tr>
+          <th>購入者</th>
+          <td>
+            <%= link_to admin_customer_path(@order.customer.id), method: :get, local:true do %>
+              <%= @order.customer.last_name %> <%= @order.customer.first_name %>
+            <% end %>
+          </td>
+        </tr>
+        <tr>
+          <th>注文日</th>
+          <td> <%= @order.created_at %></td>
+        </tr>
+        <tr>
+          <th>配送先</th>
+          <td>
+            〒<%= @order.delivery_postal_code %>
+            <%= @order.delivery_address %>
+            <%= @order.delivery_name %>
+          </td>
+        </tr>
+        <tr>
+          <th>注文ステータス</th>
+          <td>
+            <%= form_with(model: @order, url: admin_order_path, local: true) do |f| %>
+              <%= f.select :order_status, [["入金待ち"],["入金確認"] ,["製作中"],["発送準備中"],["発送済み"]] %>
+              <%= f.submit "更新", class: "btn btn-success", style: "margin-left: 30px;" %>
+            <% end %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-9">
+      <table class="table table-borderless">
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>販売ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @sum = 0 %>
+          <% @order_details.each do |order_detail| %>
+            <tr>
+              <td><%= order_detail.product.name %></td>
+              <td><%= order_detail.subtotal %></td>
+              <td><%= order_detail.amount %></td>
+              <td><%= (order_detail.subtotal * order_detail.amount * 1.1 ).to_i %></td>
+              <% @sum += (order_detail.subtotal * order_detail.amount * 1.1 ).to_i  %>
+              <td>
+                <%= form_with(model: order_detail, url: admin_order_detail_path(order_detail),local: true) do |f| %>
+                 <%= f.select :production_status, [["製作不可"],["製作待ち"] ,["製作中"],["製作完了"]] %>
+                 <%= f.submit "更新", class: "btn btn-success", style: "margin-left: 30px;" %>
+               <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-sm-3 mt-5">
+      <table class="table table-borderless">
+        <% @total = 0 %>
+          <tr>
+            <th>商品合計</th>
+            <td><%= @sum %> 円</td>
+          </tr>
+          <tr>
+            <th>送料</th>
+            <td><%= @order.delivery_fee %> 円</td>
+          </tr>
+          <tr>
+            <th>請求金額合計</th>
+            <td><%= @total = @sum + @order.delivery_fee %> 円</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
