--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8 offset-1">
       <!-- 宛先情報の確認 -->
       <table class="table table-borderless">
         <tr>
