[modified]product_view&About_page

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -17,7 +17,7 @@
 
       <!--新着商品-->
       <div class="new-product-content">
-        <h2 class="new-product-title">新着商品</h2>
+        <h2 class="new-product-title">★新着商品★</h2>
 
         <!--eachで取り出す-->
         <div class="row">
