--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -35,4 +35,17 @@
 
 .new-product-title{
   margin-top: 20px;
+  font-weight: bold;
+}
+
+.about-visual{
+  width: 800px;
+  height: 400px;
+  background-image: url(about.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  background-color: rgba(255,255,255,0.1);
+  margin-top: 30px;
+  border-radius: 30px;
 }
