--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -22,15 +22,15 @@
       </tr>
       <tr>
         <td>税抜価格</td>
-        <td><%= f.text_field :price,size: "40" %></td>
+        <td><%= f.text_field :price,size: "40" %>円</td>
       </tr>
       <tr>
         <td>販売ステータス</td>
         <td>
-           <%= f.radio_button :sales_status, '0' %>
-           <%= f.label :sales_status, "販売中", value:  0 %>
+           <%= f.radio_button :sales_status, '0', checked: true %>
+           <%= f.label :sales_status, "販売中", {value: :sales_status, style: "color: green;"} %>
            <%= f.radio_button :sales_status, '1' %>
-           <%= f.label :sales_status, "販売停止中", value:  1 %>
+           <%= f.label :sales_status, "販売停止中", {value: :sales_status, style: "color: red;"} %>
         </td>
       </tr>
       <tr>
