--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -9,6 +9,7 @@
         また、全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
         ぜひご注文ください。
       </p>
+      <div class="about-visual"></div>
     </div>
   </div>
 </div>
