--- a/app/views/public/orders/_confirmination_table.html.erb
+++ b/app/views/public/orders/_confirmination_table.html.erb
@@ -5,9 +5,9 @@
       <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.jpg", size: '50x50' %>
       <%= cart_product.product.name %>
     </td>
-    <td><%= (cart_product.product.price * 1.1).to_i %></td>
+    <td><%= (cart_product.product.price * 1.1).to_i.to_s(:delimited) %></td>
     <td><%= cart_product.amount %></td>
-    <td><%= cart_product.amount * (cart_product.product.price * 1.1).to_i %></td>
+    <td><%= (cart_product.amount * (cart_product.product.price * 1.1)).to_i.to_s(:delimited) %></td>
     <% @sum += (cart_product.product.price * cart_product.amount * 1.1 ).to_i  %>
   </tr>
 <% end %>
