--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,40 +1,11 @@
 <div class="contatiner">
   <div class="row">
-    <div class="col-sm-8">
-      <h3 style="margin-top: 20px;">注文履歴一覧</h3>
-        <table class='table table-bordered'>
-          <thead class="table-list">
-            <tr>
-              <th>注文日</th>
-              <th>配送先</th>
-              <th>注文商品</th>
-              <th>支払金額</th>
-              <th>ステータス</th>
-              <th>注文詳細</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @orders.each do |order| %>
-              <tr>
-                <td>
-                  <%= order.created_at %>
-                </td>
-                <td>
-                  〒<%= order.delivery_postal_code %><br>
-                  <%= order.delivery_address %><br>
-                  <%= order.delivery_name %>
-                </td>
-                <td>
-                  <% order.order_details.each do |order_detail| %>
-                    <%= order_detail.product.name %>
-                  <% end %>
-                </td>
-                <td><%= order.total_payment %></td>
-                <td><%= order.order_status %></td>
-                <td><%= link_to '表示する', order_path(order.id), class: "btn btn-success", method: :get %></td>
-              </tr>
-            <% end %>
-        </tbody>
+    <div class="col-sm-8 mx-auto">
+      <h3 style="margin: 20px 0;">注文履歴一覧</h3>
+      <!-- 注文履歴一覧のテーブル -->
+
+      <table class='table table-bordered'>
+        <%= render 'public/orders/order_logs', orders: @orders %>
       </table>
     </div>
   </div>
