--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,3 +1,5 @@
+<!-- 注文履歴詳細ページ -->
+
 <div class="container">
   <div class="row">
     <div class="col-2">
@@ -37,7 +39,7 @@
         <tbody>
           <tr>
             <td class="table-secondary">商品合計</td>
-            <td></td>
+            <td><%= @sum.to_s(:delimited) %></td>
           </tr>
           <tr>
             <td class="table-secondary">配送料</td>
@@ -45,7 +47,7 @@
           </tr>
           <tr>
             <td class="table-secondary">ご請求額</td>
-            <td></td>
+            <td><%= (@sum + @delivery_fee).to_s(:delimited) %></td>
           </tr>
         </tbody>
       </table>
@@ -64,10 +66,13 @@
         <tbody>
           <% @order.order_details.each do |order_detail| %>
           <tr>
-            <td><%= order_detail.product.name %></td>
-            <td><%= order_detail.subtotal %></td>
-            <td><%= order_detail.order_count %></td>
-            <td><%= order_detail.subtotal %></td>
+            <td>
+              <%= attachment_image_tag order_detail.product, :image, size: "50x50" %>
+              <%= order_detail.product.name %>
+            </td>
+            <td><%= ((order_detail.product.price * 1.1).floor).to_s(:delimited) %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= ((order_detail.product.price * 1.1).floor * order_detail.amount).to_s(:delimited) %></td>
           </tr>
           <% end %>
         </tbody>
