--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-8">
       <h2 style="margin-top: 20px;">注文情報確認</h2>
       <!-- 注文情報のテーブル -->
       <table class="table table-bordered">
@@ -23,16 +23,16 @@
       <table class="table table-bordered">
         <% @total = 0 %>
         <th class="bg-light">送料</th>
-        <td><%= @delivery_fee %></td>
+        <td><%= @delivery_fee %> 円</td>
         <th class="bg-light">商品合計</th>
-        <td><%= @sum %></td>
+        <td><%= @sum %> 円</td>
         <th class="bg-light">請求金額</th>
-        <td><%= @total = @sum + @delivery_fee %></td>
+        <td><%= (@total = @sum + @delivery_fee).to_i.to_s(:delimited) %> 円</td>
       </table>
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-8 offset-1">
+    <div class="col-sm-8">
       <!-- 宛先情報の確認 -->
       <table class="table table-borderless">
         <tr>
@@ -43,12 +43,12 @@
           <th class="h5">お届け先</th>
           <td>
             〒<%= @order.delivery_postal_code %>
-            <%= @order.delivery_address %>
+            <%= @order.delivery_address %><br>
             <%= @order.delivery_name %>
           </td>
         </tr>
       </table>
-      <div class="order_confirmination">
+      <div class="col-sm-8 offset-8 order_confirmination">
       <%= form_with model: @order, url: orders_path, method: :post, local:true do |f| %>
         <%= f.hidden_field :payment_method, :value => @order.payment_method %>
         <%= f.hidden_field :delivery_postal_code, :value => @order.delivery_postal_code %>
