--- a/app/views/public/orders/_confirmination_table.html.erb
+++ b/app/views/public/orders/_confirmination_table.html.erb
@@ -2,12 +2,12 @@
 <% @cart_products.each do |cart_product| %>
   <tr>
     <td>
-      <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.jpg", size: '50x50' %>
+      <%= attachment_image_tag cart_product.product, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
       <%= cart_product.product.name %>
     </td>
-    <td><%= (cart_product.product.price * 1.1).to_i.to_s(:delimited) %></td>
-    <td><%= cart_product.amount %></td>
-    <td><%= (cart_product.amount * (cart_product.product.price * 1.1)).to_i.to_s(:delimited) %></td>
+    <td><%= (cart_product.product.price * 1.1).to_i.to_s(:delimited) %> 円</td>
+    <td><%= cart_product.amount %> 個</td>
+    <td><%= (cart_product.amount * (cart_product.product.price * 1.1)).to_i.to_s(:delimited) %> 円</td>
     <% @sum += (cart_product.product.price * cart_product.amount * 1.1 ).to_i  %>
   </tr>
 <% end %>
