--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -5,9 +5,9 @@
  <br>
  <div class="row">
    <div class="col-md-10">
-     <table bgcolor="#FFF" class="table tableborderd shadnow">
+     <table bgcolor="#FFF" class="table tablebordered shadnow">
        <tr>
-         <th class="text-left bg-secondary text-light">会員ID</th>
+         <th class="text-left">会員ID</th>
          <td><%= @customers.id %></td>
        </tr>
        <tr>
