--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -118,5 +118,6 @@
     </table>
   </div>
   </div>
-<p>既に会員済みの方</p>
-<%= render "customers/shared/links" %>
+  
+  <div class="mt-3"></div>
+<%= render "customers/shared/links" %></h5>
