--- a/app/views/customers/passwords/new.html.erb
+++ b/app/views/customers/passwords/new.html.erb
@@ -1,15 +1,20 @@
-<h2>Forgot your password?</h2>
+<div class="row">
+  <h4 class="col-md-2 mx-auto font-weight-bold">パスワードをリセット</h4>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
+<div class="row">
+<div class="mx-auto">
+ <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+ <%= render "customers/shared/error_messages", resource: resource %>
+<table class='table table-borderless'>
+  <tr>
+    <th><%= f.label :メールアドレスを入力 %></th>
+    <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
+    <td><%= f.submit "メールを送信", class: "btn btn-warning" %></td>
+  </tr>
+  </table>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
 
