--- a/app/views/customers/shared/_links.html.erb
+++ b/app/views/customers/shared/_links.html.erb
@@ -1,14 +1,23 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your passuuuword?", new_password_path(resource_name) %><br />
-<% end %>
+<div class="row">
+<div class="mx-auto">
+<table class='table table-borderless'>
+  <tr>
+    <td></td>
+    <td><%- if controller_name != 'sessions' %>
+        <%= link_to "ログインはこちら", new_session_path(resource_name), class: "btn btn-success" %><br />
+        <% end %>
+    </td>
+  </tr>
+  <tr>
+  <td><%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  　<%= link_to "パスワードを忘れた", new_password_path(resource_name), class: 'btn btn-info' %><% end %></td>
+   <td><%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+     <%= link_to "会員登録はこちら", new_registration_path(resource_name), class: 'btn btn-secondary' %><% end %>
+   </td>
+</tr>
+</div>
+</div>
+</table>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
