--- a/app/assets/stylesheets/admin/products.scss
+++ b/app/assets/stylesheets/admin/products.scss
@@ -13,3 +13,13 @@
 .product_detail {
   margin:0 auto;
 }
+
+.true {
+  color: green;
+  font-weight: bold;
+}
+
+.false {
+  color: red;
+  font-weight: bold;
+}
