--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -37,7 +37,11 @@
                   <%= product.genre.name %>
                 </td>
                 <td>
-                  <%= product.sales_status ? "販売停止中" : "販売中" %>
+                  <% unless product.sales_status %>
+                    <p class="true">販売中</p>
+                  <% else %>
+                    <p class="false">販売停止中</p>
+                  <% end %>
                 </td>
               </tr>
             <% end %>
