cart_products,delivery

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -7,9 +7,10 @@
   font-size: 2em;
 }
 
+// 画像サイズ変更に伴いコメントアウト
 .product {
-  display: flex;
-  margin: 30px auto;
+  // display: flex;
+  // margin: 30px auto;
   justify-content: center;
   align-items: center;
 }
