--- a/app/assets/stylesheets/cart_products.scss
+++ b/app/assets/stylesheets/cart_products.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the cart_products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// .cart_item_image{
+//   margin: 0;
+//   padding: 0;
+// }
