--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,66 +1,77 @@
-<div class="container my-5">
-    <div class="row mb-3">
-      <div class="col-md-4 offset-md-1">
-
-      </div>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-3 my-5 title" >
+      <h4>ショッピングカート</h4>
     </div>
-    <div class="row justify-content-between">
-      <div class="col-md-4 mb-2">
-        <h4 class="bg-light text-center">ショッピングカート</h4>
-      </div>
-      <div class="col-md-3 offset-md-5 text-right">
-        <%= link_to "カートを空にする", cart_products_destroy_all_path, method: :delete, class:"btn btn-danger" %>
-      </div>
-    </div>
-    <div class="row mt-3">
-      <div class="col-md-12">
-        <table class="table-bordered">
-          <thead class="cart-head">
-            <tr>
-              <th>商品名</th>
-              <th>単価（税込）</th>
-              <th>数量</th>
-              <th>小計</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-          <% @sum = 0 %>
-          <% @cart_products.each do |cart_product| %>
-              <tr>
-                <td><%= (attachment_image_tag cart_product.product, :image, fallback: "no_image.jpg", size: "50x50" ) %><%= cart_product.product.name %></td>
-                <td><%= (cart_product.product.price * 1.08).to_i.to_s(:delimited)  %>円</td>
-                <td align="center" valign="middle">
-                <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
-                    <div class="form-group" style="margin: 0px;">
-                      <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
-                      <%= f.submit '変更', class:"btn btn-success"%>
-                    </div>
-                <% end %>
-                </td>
-                <td><%= (cart_product.product.price * cart_product.amount * 1.08).to_i.to_s(:delimited)  %></td>
-                <% @sum += (cart_product.product.price * cart_product.amount * 1.08 ).to_i  %>
-                <td align="center" valign="middle"><%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class:"btn btn-danger" %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div class="row mt-4">
-      <div class="col-md-3"><%= link_to '買い物を続ける', products_path, class:"btn btn-primary" %></div>
-      <div class="col-md-4 offset-md-5">
-        <table class="table-bordered">
-          <tr class="total-amount">
-            <td>合計金額</td><td><%= @sum.to_s(:delimited) %>円</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  <div class="text-center">
-    <%= link_to '情報入力に進む', new_order_path, class:"btn btn-success mt-5" %>
   </div>
+  <div class = "row" style = "height:50px">
+    <div class = "offset-10">
+      <%= link_to 'カートを空にする', cart_products_destroy_all_path, class: 'btn-sm btn-danger', method: :delete %>
+    </div>
+  </div>
+
+  <div class = "row">
+    <table class = "table table-bordered" >
+
+      <thead>
+        <tr>
+          <th class="text-center">商品名</th>
+          <th class="text-center">単価（税込）</th>
+          <th class="text-center">数量</th>
+          <th class="text-center">小計</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @sum = 0 %>
+        <% @cart_products.each do |cart_product| %>
+          <tr>
+            <th class="text-center"><%= attachment_image_tag cart_product.product, :image, size: "50x40", fallback: "no_image.jpg" %><%= cart_product.product.name %></th>
+            <th class="text-center"><%= (cart_product.product.price * 1.08).to_i.to_s(:delimited)  %>円</th>
+            <th class="text-center">
+             <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
+                <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
+                <%= f.submit "変更", class: "btn-sm btn-success" %>
+              <% end %>
+            </th>
+            <th class="text-center"><%= (cart_product.product.price * cart_product.amount * 1.08).to_i.to_s(:delimited) %>円</th>
+            <% @sum += (cart_product.product.price * cart_product.amount * 1.08 ).to_i  %>
+            <th class="text-center"><%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %></th>
+          </tr>
+
+        <% end %>
+      </tbody>
+
+    </table>
+  </div>
+
+  <div class = "row mt-5" style = "height:100px">
+    <div class = "col-2">
+     <%= link_to "買い物を続ける", products_path, class:"btn btn-primary" %>
+    </div>
+    <div class = "col-4 offset-4">
+      <table class="table table-bordered">
+        <tbody>
+          <tr>
+            <th class="text-center">合計</th><th class = "text-center"><%= @sum.to_s(:delimited) %>円</th>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class = "row">
+    <div class = "mx-auto">
+      <%= link_to "情報入力に進む", new_order_path, class:"btn btn-success" %>
+    </div>
+  </div>
+
 </div>
+
+
+
+
 
 
 
