--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -1,3 +1,13 @@
+ <% if @delivery.errors.any? %>
+  <div>
+    <ul style="color: red">
+      <h3><%= @delivery.errors.count %> errors prohibited this obj from being saved</h3>
+      <% @delivery. errors.full_messages.each do |message| %>
+       <li><%= message %></li>
+      <% end %>
+      </ul>
+  </div>
+<% end %>
 <div class = "container">
   <div class = "row">
     <div class = "col-3 my-5 title" >
