--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -37,7 +37,11 @@
       <table class="table table-borderless">
         <tr>
           <th class="h5">支払方法</th>
-          <td><%= @order.payment_method %></td>
+          <% if @order.payment_method == true %>
+            <td>クレジットカード</td>
+          <% else %>
+            <td>現金</td>
+          <% end %>
         </tr>
         <tr>
           <th class="h5">お届け先</th>
