--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -13,14 +13,18 @@
  <% @customers.each do |customer| %>
   <tr>
       <td><%= customer.id %></td>
-      
+
       <td><%= link_to admin_customer_path(customer.id) do %>
           <%= customer.last_name %>
           <%= customer.first_name %><% end %>
       </td>
-      
+
       <td><%= customer.email %></td>
-      <td><%= customer.is_deleted ? "無効" : "有効" %></td>
+      <% if customer.is_deleted? %>
+        <td class="false">退会済</td>
+      <% else %>
+        <td class="true">有効</td>
+      <% end %>
   </tr>
   <% end %>
 </tbody>
