--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -29,7 +29,7 @@
           <th>注文ステータス</th>
           <td>
             <%= form_with(model: @order, url: admin_order_path, local: true) do |f| %>
-              <%= f.select :order_status, [["入金待ち"],["入金確認"] ,["製作中"],["発送準備中"],["発送済み"]] %>
+              <%= f.select :order_status, [["入金待ち"],["入金確認"] ,["製作中"],["発送準備中"],["発送済"]] %>
               <%= f.submit "更新", class: "btn btn-success", style: "margin-left: 30px;" %>
             <% end %>
           </td>
@@ -82,7 +82,7 @@
           </tr>
           <tr>
             <th>請求金額合計</th>
-            <td><%= (@total = @sum + @order.delivery_fee).to_i.to_s(:delimited) %> 円</td>
+            <td><%= (@total = @sum + @order.delivery_fee).to_s(:delimited) %> 円</td>
           </tr>
         </tbody>
       </table>
