--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -22,7 +22,7 @@
               <tr><td class="space">販売ステータス</td><td class="space-text"><%= @product.sales_status ? "販売停止中" : "販売中"%></td></tr>
             </table>
           </div>
-          <button class="btn btn-success"><%= link_to "編集する", "/admin/products/#{@product.id}/edit"  %></button>
+          <button class="btn btn-success"><%= link_to "編集する", "/admin/products/#{@product.id}/edit", :style=>"color :white;" "text-decoration:none;" %></button>
         </div>
         <!--<div class="product_detail">-->
         <!--  <h4><%= @product.name %></h4>-->
