--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,20 +1,29 @@
+ <div class="container">
+   <div class="row">
+     <div class="px-5 mx-auto text-center">
+       <h1 class="top-head" style="font-size: 40px; margin-top: 25px; font-family: 'Pattaya', sans-serif; color: #FF9933">Welcome To NaganoCake!!</h1>
+     </div>
+   </div>
+ </div>
+
+
+ <!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><%= image_tag 'top_image.jpg' ,size: "600x400"%></div>
+      <div class="swiper-slide"><%= image_tag 'top_image1.jpeg',size: "600x400" %></div>
+      <div class="swiper-slide"><%= image_tag 'top_image2.jpg',size: "600x400" %></div>
+      <div class="swiper-slide"><%= image_tag 'top_image3.jpg',size: "600x400" %></div>
+      <div class="swiper-slide"><%= image_tag 'top_image4.jpg',size: "600x400" %></div>
+    </div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
+
 <div class="center-block">
   <div class="row">
     <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
-      <!--中央の写真は後程編集、一旦文章は入力します-->
-      <div class="main-visual">
-        <div class="main-visual-content">
-          <div class="main-visual-text">
-            <div style="padding: 10px; margin-bottom: 10px; border: 3px solid #333333; border-radius: 10px;">
-             ようこそ、ながのCAKEへ！<br>
-             このサイトは、ケーキ販売のECサイトになります。<br>
-             会員でない方も商品の閲覧はできますが、<br>
-             購入には会員登録が必要になります。
-　　　　　　</div>
-          </div>
-        </div>
-      </div>
-
       <!--新着商品-->
       <div class="new-product-content">
         <h2 class="new-product-title">★新着商品★</h2>
@@ -41,3 +50,4 @@
     </div>
   </div>
 </div>
+
