--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -9,12 +9,12 @@
     <h5 class="font-weight-bold">支払方法</h5>
   </div>
   <div class="row form-check">
-    <%= f.radio_button :payment_method, :credit, checked: true %>
+    <%= f.radio_button :payment_method, :クレジットカード, checked: true %>
     <%= f.label :payment_method, "クレジットカード" %>
   </div>
   <div class="row form-check">
-    <%= f.radio_button :payment_method, :cash %>
-    <%= f.label :payment_method, "現金" %>
+    <%= f.radio_button :payment_method, :銀行振込 %>
+    <%= f.label :payment_method, "銀行振込" %>
   </div>
   <div class="row mt-3">
     <h5 class="font-weight-bold">お届け先</h5>
